--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -8,6 +8,24 @@
     android:orientation="vertical"
     tools:context=".Einstellungen">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="53dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginLeft="29dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginBottom="42dp"
+        android:contentDescription="desc"
+        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/iv_schatzkiste"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/muenze" />
+
     <ImageButton
         android:id="@+id/ib_back_einstellungen"
         android:layout_width="59dp"
@@ -50,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/schatz2" />
+        app:srcCompat="@drawable/schatz3" />
 
     <TextView
         android:id="@+id/tv_username"
