Layout Anpassungen Quiz Features Datenbank aktualisiert

--- a/app/src/main/res/layout/activity_choose_name.xml
+++ b/app/src/main/res/layout/activity_choose_name.xml
@@ -12,6 +12,7 @@
         android:id="@+id/et_Nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPersonName"
@@ -43,6 +44,7 @@
         android:layout_marginBottom="97dp"
         android:background="@drawable/roundbutton"
         android:text="Bestätigen"
+        android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
