--- a/app/src/main/res/layout/activity_seekarte.xml
+++ b/app/src/main/res/layout/activity_seekarte.xml
@@ -568,8 +568,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/grundlagen"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.052"
                 app:layout_constraintStart_toStartOf="parent"
@@ -585,7 +586,8 @@
                 android:layout_marginRight="20dp"
                 android:text="@string/datentypen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
+                app:fontFamily="@font/geschwungen"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -600,8 +602,9 @@
                 android:layout_marginEnd="289dp"
                 android:layout_marginRight="289dp"
                 android:text="@string/entscheidungen"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -616,8 +619,9 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
                 android:text="@string/schleifen"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -632,8 +636,9 @@
                 android:layout_marginEnd="292dp"
                 android:layout_marginRight="292dp"
                 android:text="@string/funktionen"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_funktionen" />
@@ -647,8 +652,9 @@
                 android:layout_marginEnd="40dp"
                 android:layout_marginRight="40dp"
                 android:text="@string/arrays"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -666,8 +672,9 @@
                 android:fadeScrollbars="true"
                 android:fitsSystemWindows="false"
                 android:text="@string/präprozessor"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -683,8 +690,9 @@
                 android:layout_marginEnd="292dp"
                 android:layout_marginRight="292dp"
                 android:text="@string/variablen"
+                app:fontFamily="@font/geschwungen"
                 android:textColor="@android:color/background_dark"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/ib_insel_variablen" />
