--- a/app/src/main/res/layout/activity_einstellungen.xml
+++ b/app/src/main/res/layout/activity_einstellungen.xml
@@ -96,6 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="22dp"
+            android:textColor="@color/colorBackground"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_namen_aendern" />
 
@@ -105,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="22dp"
+            android:textColor="@color/colorBackground"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_kaptn_kontaktieren" />
 
@@ -113,6 +115,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorBackground"
             android:layout_marginBottom="22dp"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_crew" />
@@ -122,6 +125,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorBackground"
             android:layout_marginBottom="90dp"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_fortschritt_zuruecksetzten" />
