--- a/app/src/main/res/layout/activity_gewonnen.xml
+++ b/app/src/main/res/layout/activity_gewonnen.xml
@@ -13,12 +13,12 @@
         android:layout_height="45dp"
         android:background="@drawable/roundbutton"
         android:text="@string/bt_gewonnen"
-
+        android:textColor="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_schiff"
-        app:layout_constraintVertical_bias="0.481" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.93" />
 
     <TextView
         android:id="@+id/tv_gewonnen"
@@ -50,4 +50,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/piratenschiff" />
+
+
+    <TextView
+        android:id="@+id/tv_avgWon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Avarage"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_schiff"
+        app:layout_constraintVertical_bias="0.208" />
 </androidx.constraintlayout.widget.ConstraintLayout>
