--- a/app/src/main/res/layout/activity_main_menue.xml
+++ b/app/src/main/res/layout/activity_main_menue.xml
@@ -68,6 +68,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorBackground"
             android:layout_marginBottom="22dp"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_leinen_los" />
@@ -77,6 +78,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorBackground"
             android:layout_marginBottom="22dp"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_einstellungen" />
@@ -86,6 +88,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/colorBackground"
             android:layout_marginBottom="22dp"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_statistik" />
@@ -97,6 +100,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="90dp"
+            android:textColor="@color/colorBackground"
             android:background="@drawable/roundbutton"
             android:text="@string/bt_beenden" />
 
